--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,10 @@
     padding: 15px 30px;
 }
 
+.header i{
+    display: none;
+}
+
 .row01-container {
     background-image: url("images/background.png");
     background-position:center;
@@ -738,4 +742,427 @@
 
 .title{
     padding-top: 10px;
+}
+
+@media (max-width: 1024px){
+    .row05-container .shape{
+        margin: 40px;
+    }
+}
+
+@media (max-width: 768px){
+    .row01-container .logo{
+        width: 50%;
+        padding: 70px;
+    }
+
+    .row02-container .details{
+        padding: 10px 30px;
+    }
+
+    .row02-container .co .card img{
+        position: relative;
+        width: 200px;
+    }
+
+    .row02-container .co{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 40px;
+    }
+    
+    .row02-container .co .card{
+        background-color: #bdc8cc;
+        width: 130px;
+        height: 150px;
+        margin: 0px 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;    
+    }
+    
+    .row02-container .co .card .co-01{
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        top: -28px;
+    }
+    
+    .row02-container .co .card .co-01 img{
+        position: relative;
+        left: -40px;
+        top: 6px;
+    }
+    
+    .row02-container .co .card .co-02{        
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        top: -28px;
+    }
+    
+    .row02-container .co .card .co-02 img{
+        position: relative;
+        top: 35px;
+        left: -30px;
+    }
+    
+    .row02-container .co .card .co-03{
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        top: -28px;
+    }
+    
+    .row02-container .co .card .co-03 img{
+        position: relative;
+        top: 22px;
+        left: -25px;
+    }
+    
+    .row02-container .co .card .co-04{    
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        top: -28px;
+    }
+    
+    .row02-container .co .card .co-04 img{
+        position: relative;
+        top: 15px;
+        left: -35px;
+    }
+    
+    .row02-container .name{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10px;
+        color: #01222f;
+    }
+    
+    .row02-container .name h3{
+        font-size: 15px;
+    }
+    
+    .row02-container .name p{
+        font-size: 10px;
+    }
+    
+    .row02-container .name span{
+        text-align: center;
+        font-size: 10px;
+        width: 130px;
+        margin-top: 10px;
+    }
+    
+    .row02-container .name .container{
+        margin: 10px 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .row02-container .name .container:nth-child(1){
+        position: relative;
+        left: 30px;
+    }
+    
+    .row02-container .name .container:nth-child(2){
+        position: relative;
+        left: 9px;
+    }
+    
+    .row02-container .name .container:nth-child(3){
+        position: relative;
+        left: -10px;
+    }
+    .row02-container .name .container:nth-child(4){
+        position: relative;
+        left: -30px;
+    }
+
+    /* ========== ROW 03 ================== */
+    .row03-container{
+        margin-top: 0;
+    }
+
+    .row03-container .details{
+        padding: 10px 120px;
+    }
+
+    .row03-container .co .card img{
+        position: relative;
+        width: 200px;
+    }
+
+    .row03-container .co{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 40px;
+    }
+    
+    .row03-container .co .card{
+        background-color: #bdc8cc;
+        width: 130px;
+        height: 150px;
+        margin: 0px 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;    
+    }
+    
+    .row03-container .co .card .co-01{
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        top: -28px;
+    }
+    
+    .row03-container .co .card .co-01 img{
+        position: relative;
+        left: -30px;
+        top: 33px;
+    }
+    
+    .row03-container .co .card .co-02{        
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        top: -28px;
+    }
+    
+    .row03-container .co .card .co-02 img{
+        position: relative;
+        top: 28px;
+        left: -25px;
+    }
+    
+    .row03-container .co .card .co-03{
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        top: -28px;
+    }
+    
+    .row03-container .co .card .co-03 img{
+        position: relative;
+        top: 33px;
+        left: -25px;
+    }
+    
+    .row03-container .co .card .co-04{    
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        top: -28px;
+    }
+    
+    .row03-container .co .card .co-04 img{
+        position: relative;
+        top: 29px;
+        left: -25px;
+    }
+    
+    .row03-container .name{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 10px;
+        color: #01222f;
+    }
+    
+    .row03-container .name h3{
+        font-size: 15px;
+    }
+    
+    .row03-container .name p{
+        font-size: 10px;
+    }
+    
+    .row03-container .name span{
+        text-align: center;
+        font-size: 10px;
+        width: 130px;
+        margin-top: 10px;
+    }
+    
+    .row03-container .name .container{
+        margin: 10px 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .row03-container .name .container:nth-child(1){
+        position: relative;
+        left: 30px;
+    }
+    
+    .row03-container .name .container:nth-child(2){
+        position: relative;
+        left: 9px;
+    }
+    
+    .row03-container .name .container:nth-child(3){
+        position: relative;
+        left: -10px;
+    }
+    .row03-container .name .container:nth-child(4){
+        position: relative;
+        left: -30px;
+    }
+
+    .row05-container .shape{
+        width: 180px;
+        height: 180px;
+        margin: 30px;
+    }
+
+    .row06-container{
+        padding: 150px 0px 150px 0px;
+    }
+
+    .row06-container .visi, .row06-container .misi{
+        font-size: 18px;
+    }
+
+    .row06-container .misi{
+        width: 600px;
+    }
+
+    .row07-container .content{
+        flex-direction: column;        
+    }
+
+    .row07-container .content .content-left{
+        width: 100%;
+        position: relative;
+        top: 150px;
+        margin-bottom: 80px;
+    }
+
+    .row07-container .content .content-right .product img, 
+    .row07-container .content .content-right .jasa img{
+        width: 600px;
+    }
+
+    .row08-container{
+        margin-top: -100px;
+    }
+
+    .row08-container .details {
+        width: 600px;
+    }
+
+    .row08-container .slide{
+        width: 768px;
+    }
+
+    .row08-container .slide .card{
+        width: 300px;
+        height: 400px;
+    }
+
+    .row08-container .slide .swiper-container .swiper-wrapper .swiper-slide{
+        width: 300px;
+    }
+
+    .row08-container .slide .card .sliderText{
+        height: 150px;
+    }
+
+    .row08-container .slide .card .sliderText h3{
+        font-size: 30px;
+    }
+    .row08-container .slide .card .content{
+        width: 300px;
+    }
+
+    .footer{
+        padding: 40px 40px;
+    }
+
+    .footer .content{
+        margin-right: 50px;
+    }
+
+    .footer-down{
+        padding: 30px 40px;
+    }
+}
+
+@media (max-width:576px){
+    .header{
+        position: relative;
+        display: flex;
+        align-items: center;
+        padding:15px 30px;
+        justify-content: space-between;
+    }
+
+    .header img{
+        width: 130px;
+        padding: 15px 0px;
+    }
+
+    .header i{
+        display: block;
+        font-size: 25px;
+        color: #002733;
+        cursor: pointer;
+    }
+    
+    .row01-container{
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+        background-position: left;
+    }
+
+    .row01-container .navigation button{
+        margin: 40px 0px 10px 0px;
+    }
+
+    .row01-container .navigation{
+        background: rgba(14, 55, 65);
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 30px;
+        position: absolute;
+        width: 100%;
+        top: -555px;
+        transition: all 0.5s;
+    }
+
+    .row01-container .navigation nav{
+        width: 100%;
+    }
+    .row01-container .navigation nav ul{
+        display: grid;
+        grid-template-areas: 
+            "row11 row012" 
+            "row21 row22"
+            "row31 row33"
+            "button button";
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .row01-container .navigation nav ul li{
+        padding: 30px;
+        width: 100%;
+        text-align: center;  
+    }
+
+    .row01-container .navigation nav ul a{
+        text-decoration: none;
+        color: #fff;
+        padding:0px;
+        width: 100%;
+    }
+
+    .row01-container .logo{
+        width: 100%;
+    }
+
 }
